# punter

./: .env.example  .gitignore  pyproject.toml
api/: main.py
api/routes/: races.py  runners.py
db/: client.py
db/migrations/: 001_initial_schema.sql
racing/: config.py  scheduler.py
racing/model/: evaluate.py
racing/pipeline/betfair/: historical.py  market_utils.py  streaming.py
racing/pipeline/odds_api/: client.py
racing/pipeline/tasks/: baseline_predict.py  live_poll.py  nightly_batch.py  results.py
tests/pipeline/: test_market_utils.py
ui/: .env.local.example  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/cron/nightly/: route.ts
ui/app/races/[id]/: RaceDetailClient.tsx  page.tsx
ui/components/: CountdownTimer.tsx  FreshnessBar.tsx  OddsCell.tsx  RaceCard.tsx  RaceList.tsx  RunnerTable.tsx
ui/lib/: api.ts  db.ts  supabase.ts  timezone.ts
