[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "racing-edge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # data & pipeline
    "betfairlightweight>=2.18",
    "pandas>=2.2",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",

    # database
    "supabase>=2.5",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    # model
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.13",

    # api
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",

    # utils
    "pytz>=2024.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
